[package]
name = "rustify-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv_codegen = "0.15.0"
serenity = { version="0.11.6", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "voice"] }
songbird = "0.3.2"
tokio = { version = "1", features = ["full"] }
